Fix bad alignment of field names in print mode.

--- a/kerko/static/kerko/css/styles.css
+++ b/kerko/static/kerko/css/styles.css
@@ -34,6 +34,9 @@
     */
     display: block !important;
   }
+  .text-md-right.text-print-left {
+    text-align: left !important;
+  }
 }
 .w-40 {
   width: 40% !important;
